# test_repo

./: README.md
np/network programming/AS1/LeHoangTuanAnh+MaiNgocLam/gtk-rungchuongvang1/: .anjuta_sym_db.db  Makefile.am  Makefile.in  configure  configure.ac
np/network programming/AS1/LeHoangTuanAnh+MaiNgocLam/gtk-rungchuongvang1/Debug/: Makefile  config.h  config.status  libtool
np/network programming/AS1/LeHoangTuanAnh+MaiNgocLam/gtk-rungchuongvang1/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
np/network programming/AS1/LeHoangTuanAnh+MaiNgocLam/gtk-rungchuongvang1/src/: Client.c  Database.txt  Database.txt~  Global.c  Global.c~  Graphics.c  Graphics.h  (+7 more)
np/network programming/knights-2.5.0/po/: CMakeLists.txt
np/network programming/knights-2.5.0/po/bs/: knights.po
np/network programming/knights-2.5.0/po/ca/: knights.po
np/network programming/knights-2.5.0/po/ca@valencia/: knights.po
np/network programming/knights-2.5.0/po/cs/: knights.po
np/network programming/knights-2.5.0/po/da/: knights.po
np/network programming/knights-2.5.0/po/de/: knights.po
np/network programming/knights-2.5.0/po/el/: knights.po
np/network programming/knights-2.5.0/po/es/: knights.po
np/network programming/knights-2.5.0/po/et/: knights.po
np/network programming/knights-2.5.0/po/fi/: knights.po
np/network programming/knights-2.5.0/po/fr/: knights.po
np/network programming/knights-2.5.0/po/ga/: knights.po
np/network programming/knights-2.5.0/po/gl/: knights.po
np/network programming/knights-2.5.0/po/it/: knights.po
np/network programming/knights-2.5.0/po/km/: knights.po
np/network programming/knights-2.5.0/po/lt/: knights.po
np/network programming/knights-2.5.0/po/nb/: knights.po
np/network programming/knights-2.5.0/po/nds/: knights.po
np/network programming/knights-2.5.0/po/nl/: knights.po
np/network programming/knights-2.5.0/po/nn/: knights.po
np/network programming/knights-2.5.0/po/pl/: knights.po
np/network programming/knights-2.5.0/po/pt/: knights.po
np/network programming/knights-2.5.0/po/pt_BR/: knights.po
np/network programming/knights-2.5.0/po/ru/: knights.po
np/network programming/knights-2.5.0/po/sl/: knights.po
np/network programming/knights-2.5.0/po/sr/: knights.po
np/network programming/knights-2.5.0/po/sr@ijekavian/: knights.po
np/network programming/knights-2.5.0/po/sr@ijekavianlatin/: knights.po
np/network programming/knights-2.5.0/po/sr@latin/: knights.po
np/network programming/knights-2.5.0/po/sv/: knights.po
np/network programming/knights-2.5.0/po/uk/: knights.po
np/network programming/knights-2.5.0/po/zh_TW/: knights.po
(+1691 files in other folders)
